--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>Bienes Raices</title>
 </head>
 <body>
+    <header>
+        <div class="contenedor_nav">
+            <h1>BIENESRAICES</h1>
+            <ul class="nav">
+                <li>Nosotros</li>
+                <li>Anuncios</li>
+                <li>Blog</li>
+                <li>Contacto</li>
+            </ul>
+        </div>
+        <p class="texto_header">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
+    </header>
+    <section class="nosotros">
+ewewe
+    </section>
     
 </body>
 </html>
