--- a/index.html
+++ b/index.html
@@ -8,20 +8,103 @@
     <title>Bienes Raices</title>
 </head>
 <body>
-    <header>
-        <div class="contenedor_nav">
-            <h1>BIENESRAICES</h1>
-            <ul class="nav">
-                <li>Nosotros</li>
-                <li>Anuncios</li>
-                <li>Blog</li>
-                <li>Contacto</li>
-            </ul>
+    <header class="header_prinsipal inicio">
+        <div class="contenedor_p">
+        <div class="contenedor_header">
+                <img src="img/logo.svg" alt="">
+                <div class="contenedor_nav">
+                        <a href="#">Nosotros</a>
+                        <a href="#">Anuncios</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Contacto</a>  
+                </div>
         </div>
         <p class="texto_header">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
+        </div>
     </header>
-    <section class="nosotros">
-ewewe
+
+    <div class="titulo_nosotros">
+        <h2>Mas Sobre Nósotros</h2>
+    </div>
+        <section class="nosotros">
+        <article class="article_nosotros">
+            <img src="/img/icono1.svg" class="icono">
+            <h2>SEGURIDAD</h2>
+            <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
+                dolor necessitatibus natus nesciunt quo suscipit cumque, 
+                voluptatibus impedit adipisci aliquam eveniet laudantium!</P>
+        </article>
+
+        <article class="article_nosotros">
+            <img src="/img/icono2.svg" class="icono">
+            <h2>EL MEJOR PRECIO</h2>
+            <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
+                dolor necessitatibus natus nesciunt quo suscipit cumque, 
+                voluptatibus impedit adipisci aliquam eveniet laudantium!</P>
+        </article>
+
+        <article class="article_nosotros"> 
+            <img src="/img/icono3.svg" class="icono icono3">
+            <h2>A TIEMPO</h2>
+            <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
+                dolor necessitatibus natus nesciunt quo suscipit cumque, 
+                voluptatibus impedit adipisci aliquam eveniet laudantium!</P>
+        </article>
+    </section>
+    <header>
+        <h2 class="h1_depart">Casas y Departamentos en venta</h2>
+    </header>
+    <main>
+    <section class="section_depart">
+        <article>
+            <img src="/img/anuncio1.jpg" class="img_depart">
+            <div>
+            <h2>Casa de lujo en el Lago</h2>
+            <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+            <p class="p_costo">$2,500,000</p>
+            <div class="iconos_depart">
+                <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
+                <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+            </div>
+            <a href="#"> Ver propiedad</a>
+        </article>
+        <article>
+            <img src="/img/anuncio2.jpg" class="img_depart">
+            <h2>Casa de lujo en el Lago</h2>
+            <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+            <p class="p_costo">$3,000,000</p>
+            <div class="iconos_depart">
+                <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
+                <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+            </div>
+            <a href="#"> Ver propiedad</a>
+        </article>
+        <article>
+            <img src="/img/anuncio3.jpg" class="img_depart">
+            <h2>Casa de lujo en el Lago</h2>
+            <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+            <p class="p_costo">$2,000,000</p>
+            <div class="iconos_depart">
+                <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
+                <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+            </div>
+            <a href="#"> Ver propiedad</a>
+        </article>
+    </section>
+    <a href="#">Ver Todas</a>
+    </main>
+    <section class="section_inter">
+        <header class="header_inter">
+            <h2>Encuentra la casa de tu sueño</h2>
+            <p>Llena el formulario de contacto y una asesor se pondra en contacto contigo a la brevedad</p>
+            <a href="#">Contactanos</a>
+        </header>
     </section>
     
 </body>
