--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Bienes Raices</title>
 </head>
 <body>
     <header class="header_prinsipal inicio">
         <div class="contenedor_p">
-        <div class="contenedor_header">
-                <img src="img/logo.svg" alt="">
-                <div class="contenedor_nav">
-                        <a href="#">Nosotros</a>
-                        <a href="#">Anuncios</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Contacto</a>  
-                </div>
-        </div>
-        <p class="texto_header">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
+            <div class="contenedor_header">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="">
+                </a>
+                    <div class="contenedor_nav">
+                            <a href="#">Nosotros</a>
+                            <a href="#">Anuncios</a>
+                            <a href="#">Blog</a>
+                            <a href="#">Contacto</a>  
+                    </div>
+            </div>
+            <p class="texto_header">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
         </div>
     </header>
 
@@ -60,7 +63,7 @@
     <main>
     <section class="section_depart">
         <article>
-            <img src="/img/anuncio1.jpg" class="img_depart">
+            <img src="/img/anuncio1.jpg">
             <div>
             <h2>Casa de lujo en el Lago</h2>
             <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
@@ -73,7 +76,7 @@
             <a href="#"> Ver propiedad</a>
         </article>
         <article>
-            <img src="/img/anuncio2.jpg" class="img_depart">
+            <img src="/img/anuncio2.jpg">
             <h2>Casa de lujo en el Lago</h2>
             <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
             <p class="p_costo">$3,000,000</p>
@@ -85,7 +88,7 @@
             <a href="#"> Ver propiedad</a>
         </article>
         <article>
-            <img src="/img/anuncio3.jpg" class="img_depart">
+            <img src="/img/anuncio3.jpg">
             <h2>Casa de lujo en el Lago</h2>
             <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
             <p class="p_costo">$2,000,000</p>
