primer pagina lista

--- a/index.html
+++ b/index.html
@@ -9,106 +9,152 @@
     <title>Bienes Raices</title>
 </head>
 <body>
-    <header class="header_prinsipal inicio">
-        <div class="contenedor_p">
-            <div class="contenedor_header">
-                <a href="index.html">
-                    <img src="img/logo.svg" alt="">
-                </a>
-                    <div class="contenedor_nav">
-                            <a href="#">Nosotros</a>
-                            <a href="#">Anuncios</a>
-                            <a href="#">Blog</a>
-                            <a href="#">Contacto</a>  
-                    </div>
+<!-------------------------------------Header----------------------------------------->
+
+    <header class="head_inicio inicio">
+
+            <div class="contenedor_head dis_flex_b">
+                <div class="contenedor_nav dis_flex_b">
+
+                        <a href="index.html">
+                            <img src="img/logo.svg" alt="">
+                        </a>
+                        <div class="contenedor_menu dis_flex_b">
+                                <a href="#">Nosotros</a>
+                                <a href="#">Anuncios</a>
+                                <a href="#">Blog</a>
+                                <a href="#">Contacto</a>  
+                        </div>
+                </div>
+                <p class="text_head">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
             </div>
-            <p class="texto_header">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
-        </div>
+
     </header>
 
-    <div class="titulo_nosotros">
+<!-------------------------------------Section Nosotros-------------------------------------------->
+
+    <div class="title_n">
+
         <h2>Mas Sobre Nósotros</h2>
+
     </div>
-        <section class="nosotros">
-        <article class="article_nosotros">
-            <img src="/img/icono1.svg" class="icono">
-            <h2>SEGURIDAD</h2>
-            <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
-                dolor necessitatibus natus nesciunt quo suscipit cumque, 
-                voluptatibus impedit adipisci aliquam eveniet laudantium!</P>
-        </article>
 
-        <article class="article_nosotros">
-            <img src="/img/icono2.svg" class="icono">
-            <h2>EL MEJOR PRECIO</h2>
-            <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
-                dolor necessitatibus natus nesciunt quo suscipit cumque, 
-                voluptatibus impedit adipisci aliquam eveniet laudantium!</P>
-        </article>
+        <section class="section_n dis_flex_b">
+                <article class="article_n dis_flex_b">
+                    <img src="/img/icono1.svg" class="icono_n">
+                    <h2>SEGURIDAD</h2>
+                    <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
+                        dolor necessitatibus natus nesciunt quo suscipit cumque, 
+                        voluptatibus impedit adipisci aliquam eveniet laudantium!
+                    </P>
+                </article>
 
-        <article class="article_nosotros"> 
-            <img src="/img/icono3.svg" class="icono icono3">
-            <h2>A TIEMPO</h2>
-            <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
-                dolor necessitatibus natus nesciunt quo suscipit cumque, 
-                voluptatibus impedit adipisci aliquam eveniet laudantium!</P>
-        </article>
-    </section>
+                <article class="article_n dis_flex_b">
+                    <img src="/img/icono2.svg" class="icono_n">
+                    <h2>EL MEJOR PRECIO</h2>
+                    <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
+                        dolor necessitatibus natus nesciunt quo suscipit cumque, 
+                        voluptatibus impedit adipisci aliquam eveniet laudantium!
+                    </P>
+                </article>
+
+                <article class="article_n dis_flex_b"> 
+                    <img src="/img/icono3.svg" class="icono_n icono3">
+                    <h2>A TIEMPO</h2>
+                    <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
+                        dolor necessitatibus natus nesciunt quo suscipit cumque, 
+                        voluptatibus impedit adipisci aliquam eveniet laudantium!
+                    </P>
+                </article>
+        </section>
+
+<!----------------------------------- section_depart----------------------------------------------------------------------->
     <header>
         <h2 class="h1_depart">Casas y Departamentos en venta</h2>
     </header>
+
     <main>
-    <section class="section_depart">
-        <article>
-            <img src="/img/anuncio1.jpg">
-            <div>
-            <h2>Casa de lujo en el Lago</h2>
-            <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-            <p class="p_costo">$2,500,000</p>
-            <div class="iconos_depart">
-                <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
-            </div>
-            <a href="#"> Ver propiedad</a>
-        </article>
-        <article>
-            <img src="/img/anuncio2.jpg">
-            <h2>Casa de lujo en el Lago</h2>
-            <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-            <p class="p_costo">$3,000,000</p>
-            <div class="iconos_depart">
-                <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
-            </div>
-            <a href="#"> Ver propiedad</a>
-        </article>
-        <article>
-            <img src="/img/anuncio3.jpg">
-            <h2>Casa de lujo en el Lago</h2>
-            <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-            <p class="p_costo">$2,000,000</p>
-            <div class="iconos_depart">
-                <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
-            </div>
-            <a href="#"> Ver propiedad</a>
-        </article>
-    </section>
-    <a href="#">Ver Todas</a>
+        <section class="section_depart dis_flex_b">
+            <article class="article_depart">
+                <img src="/img/anuncio1.jpg">
+
+                <div class="contenedor_depart  dis_flex_b">
+
+                    <h2>Casa de lujo en el Lago</h2>
+
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+
+                    <p class="p_costo">$2,500,000</p>
+
+                    <div class="iconos_depart">
+                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                    </div>
+
+                    <a href="#" class="btn_d"> Ver propiedad</a>
+                </div>
+            </article>
+
+            <article  class="article_depart">
+                <img src="/img/anuncio2.jpg">
+
+                <div class="contenedor_depart  dis_flex_b">
+
+                    <h2>Casa de lujo en el Lago</h2>
+
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+
+                    <p class="p_costo">$3,000,000</p>
+
+                    <div class="iconos_depart">
+                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                    </div>
+
+                    <a href="#"class="btn_d"> Ver propiedad</a>
+                </div>
+            </article>
+
+            <article class="article_depart">
+                <img src="/img/anuncio3.jpg">
+
+                <div class="contenedor_depart  dis_flex_b">
+
+                    <h2>Casa de lujo en el Lago</h2>
+
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+
+                    <p class="p_costo">$2,000,000</p>
+
+                    <div class="iconos_depart">
+                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                    </div>
+
+                    <a href="#" class="btn_d"> Ver propiedad</a>
+                </div>
+            </article>
+        </section>
+    
+    <div class="contenedor_btn_d">
+         <a href="#" class="btn_verde btn">Ver Todas</a>
+    </div>
     </main>
+<!-------------------------------------------------------------------------------------------------------------->
     <section class="section_inter">
-        <header class="header_inter">
+        <header class="header_inter dis_flex_b">
             <h2>Encuentra la casa de tu sueño</h2>
             <p>Llena el formulario de contacto y una asesor se pondra en contacto contigo a la brevedad</p>
-            <a href="#">Contactanos</a>
+            <a href="#" class="btn_verde btn_inter" >Contactanos</a>
         </header>
     </section>
+
     
 </body>
 </html>
