--- a/index.html
+++ b/index.html
@@ -155,6 +155,45 @@
         </header>
     </section>
 
+    <section class="section_blog dis_flex_b">
+        <div class="contenedor_blog">
+            <h2 class="h2_blog">Nuestro Blog</h2>
+            <article class="article_blog dis_flex_b">
+                <img src="/img/blog1.jpg" alt="">
+                <div class="blog_p dis_flex_b">
+                    <h2>Terraza en el techo de tu casa</h2>
+                    <p>Escrito el:<small>26/05/2021</small> por: <small>Admin</small></p>
+                    <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando</p>
+                </div>
+            </article>
+            <article class="article_blog dis_flex_b">
+                <img src="/img/blog2.jpg" alt="">
+                <div class="blog_p dis_flex_b">
+                    <h2>Guia para la decoracion de tu hogar</h2>
+                    <p>Escrito el:<small>26/05/2021</small> por: <small>Admin</small></p>
+                    <p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+                </div>
+            </article>
+
+        </div>
+        <div class="contenedor_test">
+            <h2 class="h2_blog">Testimoniales</h2>
+            <article class="dis_flex_b">
+                <img src="/img/comilla.svg" alt="">
+                <p class="p_test">El personal se comporto de una excelente forma, muy buena atencion y la casa que me ofrecieros
+                    cumple con todas mis expectativas.<br>
+                    <small class="autor_test">-Juan De la Torre</small>
+                </p>
+               
+            </article>
+
+        </div>
+    </section>
+
+    <footer class="footer_prinsipal">
+        <p><small>Copyright 2021 - exoncabral1@gmail.com</small></p>
+    </footer>
+
     
 </body>
 </html>
