--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
 <!-------------------------------------Header----------------------------------------->
 
-    <header class="head_inicio inicio">
+    <header class="head_inicio inicio color_white">
 
-            <div class="contenedor_head dis_flex_b">
+            <div class="contenedor_head dis_flex_b section">
                 <div class="contenedor_nav dis_flex_b">
 
                         <a href="index.html">
                             <img src="img/logo.svg" alt="">
                         </a>
                         <div class="contenedor_menu dis_flex_b">
-                                <a href="#">Nosotros</a>
+                                <a href="nosotros.html">Nosotros</a>
                                 <a href="#">Anuncios</a>
                                 <a href="#">Blog</a>
                                 <a href="#">Contacto</a>  
@@ -39,7 +39,7 @@
 
     </div>
 
-        <section class="section_n dis_flex_b">
+        <section class="section_n dis_flex_b section">
                 <article class="article_n dis_flex_b">
                     <img src="/img/icono1.svg" class="icono_n">
                     <h2>SEGURIDAD</h2>
@@ -77,7 +77,7 @@
     </header>
 
     <main>
-        <section class="section_depart dis_flex_b">
+        <section class="section_depart dis_flex_b section">
             <article class="article_depart">
                 <img src="/img/anuncio1.jpg">
 
@@ -142,20 +142,20 @@
             </article>
         </section>
     
-    <div class="contenedor_btn_d">
+    <div class="contenedor_btn_d section">
          <a href="#" class="btn_verde btn">Ver Todas</a>
     </div>
     </main>
 <!-------------------------------------------------------------------------------------------------------------->
     <section class="section_inter">
-        <header class="header_inter dis_flex_b">
+        <header class="header_inter dis_flex_b color_white">
             <h2>Encuentra la casa de tu sueño</h2>
             <p>Llena el formulario de contacto y una asesor se pondra en contacto contigo a la brevedad</p>
             <a href="#" class="btn_verde btn_inter" >Contactanos</a>
         </header>
     </section>
 
-    <section class="section_blog dis_flex_b">
+    <section class="section_blog dis_flex_b section">
         <div class="contenedor_blog">
             <h2 class="h2_blog">Nuestro Blog</h2>
             <article class="article_blog dis_flex_b">
@@ -190,8 +190,15 @@
         </div>
     </section>
 
-    <footer class="footer_prinsipal">
+    <footer class="footer_prinsipal dis_flex_b color_white">
         <p><small>Copyright 2021 - exoncabral1@gmail.com</small></p>
+
+        <div class="contenedor_menu contenedor_nav dis_flex_b">
+            <a href="nosotros.html">Nosotros</a>
+            <a href="#">Anuncios</a>
+            <a href="#">Blog</a>
+            <a href="#">Contacto</a>  
+    </div>
     </footer>
 
     
