--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                             <img src="img/logo.svg" alt="">
                         </a>
                         <div class="contenedor_menu dis_flex_b">
-                                <a href="nosotros.html">Nosotros</a>
-                                <a href="#">Anuncios</a>
+                                <a href="html/nosotros.html">Nosotros</a>
+                                <a href="html/Anuncios.html">Anuncios</a>
                                 <a href="#">Blog</a>
                                 <a href="#">Contacto</a>  
                         </div>
@@ -143,7 +143,7 @@
         </section>
     
     <div class="contenedor_btn_d section">
-         <a href="#" class="btn_verde btn">Ver Todas</a>
+         <a href="html/Anuncios.html" class="btn_verde btn">Ver Todas</a>
     </div>
     </main>
 <!-------------------------------------------------------------------------------------------------------------->
@@ -194,8 +194,8 @@
         <p><small>Copyright 2021 - exoncabral1@gmail.com</small></p>
 
         <div class="contenedor_menu contenedor_nav dis_flex_b">
-            <a href="nosotros.html">Nosotros</a>
-            <a href="#">Anuncios</a>
+            <a href="/html/nosotros.html">Nosotros</a>
+            <a href="/html/Anuncios.html">Anuncios</a>
             <a href="#">Blog</a>
             <a href="#">Contacto</a>  
     </div>
