--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Bienes Raices/nosotros</title>
 </head>
 <body>
 <!-------------------------------------Header----------------------------------------->
 
     <header class="dis_flex_b color_white menu_header">
-                        <a href="index.html">
-                            <img src="img/logo.svg" alt="">
+                        <a href="../index.html">
+                            <img src="../img/logo.svg" alt="">
                         </a>
                         <div class="contenedor_menu dis_flex_b">
                                 <a href="#">Nosotros</a>
-                                <a href="#">Anuncios</a>
+                                <a href="Anuncios.html">Anuncios</a>
                                 <a href="#">Blog</a>
                                 <a href="#">Contacto</a>  
                         </div>
@@ -26,7 +26,7 @@
     <main class="section">
         <h1>Conoce Sobre Nosotros</h1>
         <section class="contenedor_nosotros">
-            <img src="/img/nosotros.jpg" alt="">
+            <img src="../img/nosotros.jpg" alt="">
             <div>
                     <h2>25 años de experiencia</h2>
                 <p>
@@ -55,7 +55,7 @@
 
         <section class="section_n dis_flex_b section">
                 <article class="article_n dis_flex_b">
-                    <img src="/img/icono1.svg" class="icono_n">
+                    <img src="../img/icono1.svg" class="icono_n">
                     <h2>SEGURIDAD</h2>
                     <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                         Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
@@ -65,7 +65,7 @@
                 </article>
 
                 <article class="article_n dis_flex_b">
-                    <img src="/img/icono2.svg" class="icono_n">
+                    <img src="../img/icono2.svg" class="icono_n">
                     <h2>EL MEJOR PRECIO</h2>
                     <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                         Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
@@ -75,7 +75,7 @@
                 </article>
 
                 <article class="article_n dis_flex_b"> 
-                    <img src="/img/icono3.svg" class="icono_n icono3">
+                    <img src="../img/icono3.svg" class="icono_n icono3">
                     <h2>A TIEMPO</h2>
                     <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                         Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
@@ -92,7 +92,7 @@
 
         <div class="contenedor_menu contenedor_nav dis_flex_b">
             <a href="#">Nosotros</a>
-            <a href="#">Anuncios</a>
+            <a href="Anuncios.html">Anuncios</a>
             <a href="#">Blog</a>
             <a href="#">Contacto</a>  
     </div>
