save four pages

--- a/html/Anuncios.html
+++ b/html/Anuncios.html
@@ -18,7 +18,7 @@
         <div class="contenedor_menu dis_flex_b">
                 <a href="nosotros.html">Nosotros</a>
                 <a href="Anuncios.html">Anuncios</a>
-                <a href="#">Blog</a>
+                <a href="blog.html">Blog</a>
                 <a href="#">Contacto</a>  
         </div>
     </header>
@@ -166,7 +166,7 @@
         <div class="contenedor_menu contenedor_nav dis_flex_b">
             <a href="nosotros.html">Nosotros</a>
             <a href="Anuncios.html">Anuncios</a>
-            <a href="#">Blog</a>
+            <a href="blog.html">Blog</a>
             <a href="#">Contacto</a>  
     </div>
     </footer>
