--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -18,8 +18,8 @@
                         <div class="contenedor_menu dis_flex_b">
                                 <a href="#">Nosotros</a>
                                 <a href="Anuncios.html">Anuncios</a>
-                                <a href="#">Blog</a>
-                                <a href="#">Contacto</a>  
+                                <a href="blog.html">Blog</a>
+                                <a href="contacto.html">Contacto</a>  
                         </div>
     </header>
 
@@ -93,8 +93,8 @@
         <div class="contenedor_menu contenedor_nav dis_flex_b">
             <a href="#">Nosotros</a>
             <a href="Anuncios.html">Anuncios</a>
-            <a href="#">Blog</a>
-            <a href="#">Contacto</a>  
+            <a href="blog.html">Blog</a>
+            <a href="contacto.html">Contacto</a>  
     </div>
     </footer>
 
