--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <div class="contenedor_menu dis_flex_b">
                                 <a href="html/nosotros.html">Nosotros</a>
                                 <a href="html/Anuncios.html">Anuncios</a>
-                                <a href="#">Blog</a>
-                                <a href="#">Contacto</a>  
+                                <a href="/html/blog.html">Blog</a>
+                                <a href="/html/contacto.html">Contacto</a>  
                         </div>
                 </div>
                 <p class="text_head">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
@@ -196,8 +196,8 @@
         <div class="contenedor_menu contenedor_nav dis_flex_b">
             <a href="/html/nosotros.html">Nosotros</a>
             <a href="/html/Anuncios.html">Anuncios</a>
-            <a href="#">Blog</a>
-            <a href="#">Contacto</a>  
+            <a href="/html/blog.html">Blog</a>
+            <a href="/html/contacto.html">Contacto</a>  
     </div>
     </footer>
 
