Fin del Proyecto

--- a/html/Anuncios.html
+++ b/html/Anuncios.html
@@ -19,7 +19,7 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="Anuncios.html">Anuncios</a>
                 <a href="blog.html">Blog</a>
-                <a href="#">Contacto</a>  
+                <a href="contacto.html">Contacto</a>  
         </div>
     </header>
 
@@ -167,7 +167,7 @@
             <a href="nosotros.html">Nosotros</a>
             <a href="Anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a>
-            <a href="#">Contacto</a>  
+            <a href="contacto.html">Contacto</a>  
     </div>
     </footer>
 
