--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <header class="header_inter dis_flex_b color_white">
             <h2>Encuentra la casa de tu sueño</h2>
             <p>Llena el formulario de contacto y una asesor se pondra en contacto contigo a la brevedad</p>
-            <a href="#" class="btn_verde btn_inter" >Contactanos</a>
+            <a href="html/contacto.html" class="btn_verde btn_inter" >Contactanos</a>
         </header>
     </section>
 
