--- a/html/blog.html
+++ b/html/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Bienes Raices/Blog</title>
 </head>
@@ -30,7 +30,7 @@
                 <div class="contenedor_blog">
 
                     <article class="article_blog dis_flex_b">
-                        <img src="/img/blog1.jpg" alt="">
+                        <img src="../img/blog1.jpg" alt="">
                         <div class="blog_p dis_flex_b">
                             <h2>Terraza en el techo de tu casa</h2>
                             <p>Escrito el:<small>26/05/2021</small> por: <small>Admin</small></p>
@@ -39,7 +39,7 @@
                     </article>
 
                     <article class="article_blog dis_flex_b">
-                        <img src="/img/blog2.jpg" alt="">
+                        <img src="../img/blog2.jpg" alt="">
                         <div class="blog_p dis_flex_b">
                             <h2>Guia para la decoracion de tu hogar</h2>
                             <p>Escrito el:<small>26/05/2021</small> por: <small>Admin</small></p>
@@ -48,7 +48,7 @@
                     </article>
 
                     <article class="article_blog dis_flex_b">
-                        <img src="/img/blog3.jpg" alt="">
+                        <img src="../img/blog3.jpg" alt="">
                         <div class="blog_p dis_flex_b">
                             <h2>Terraza en el techo de tu casa</h2>
                             <p>Escrito el:<small>26/05/2021</small> por: <small>Admin</small></p>
@@ -57,7 +57,7 @@
                     </article>
                     
                     <article class="article_blog dis_flex_b">
-                        <img src="/img/blog4.jpg" alt="">
+                        <img src="../img/blog4.jpg" alt="">
                         <div class="blog_p dis_flex_b">
                             <h2>Guia para la decoracion de tu hogar</h2>
                             <p>Escrito el:<small>26/05/2021</small> por: <small>Admin</small></p>
