--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <div class="contenedor_menu dis_flex_b">
                                 <a href="html/nosotros.html">Nosotros</a>
                                 <a href="html/Anuncios.html">Anuncios</a>
-                                <a href="/html/blog.html">Blog</a>
-                                <a href="/html/contacto.html">Contacto</a>  
+                                <a href="html/blog.html">Blog</a>
+                                <a href="html/contacto.html">Contacto</a>  
                         </div>
                 </div>
                 <p class="text_head">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
@@ -41,7 +41,7 @@
 
         <section class="section_n dis_flex_b section">
                 <article class="article_n dis_flex_b">
-                    <img src="/img/icono1.svg" class="icono_n">
+                    <img src="img/icono1.svg" class="icono_n">
                     <h2>SEGURIDAD</h2>
                     <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                         Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
@@ -51,7 +51,7 @@
                 </article>
 
                 <article class="article_n dis_flex_b">
-                    <img src="/img/icono2.svg" class="icono_n">
+                    <img src="img/icono2.svg" class="icono_n">
                     <h2>EL MEJOR PRECIO</h2>
                     <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                         Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
@@ -61,7 +61,7 @@
                 </article>
 
                 <article class="article_n dis_flex_b"> 
-                    <img src="/img/icono3.svg" class="icono_n icono3">
+                    <img src="img/icono3.svg" class="icono_n icono3">
                     <h2>A TIEMPO</h2>
                     <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                         Fugit sequi at quas perferendis ratione commodi nostrum ipsam 
@@ -79,7 +79,7 @@
     <main>
         <section class="section_depart dis_flex_b section">
             <article class="article_depart">
-                <img src="/img/anuncio1.jpg">
+                <img src="img/anuncio1.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -90,9 +90,9 @@
                     <p class="p_costo">$2,500,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#" class="btn_d"> Ver propiedad</a>
@@ -100,7 +100,7 @@
             </article>
 
             <article  class="article_depart">
-                <img src="/img/anuncio2.jpg">
+                <img src="img/anuncio2.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -111,9 +111,9 @@
                     <p class="p_costo">$3,000,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#"class="btn_d"> Ver propiedad</a>
@@ -121,7 +121,7 @@
             </article>
 
             <article class="article_depart">
-                <img src="/img/anuncio3.jpg">
+                <img src="img/anuncio3.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -132,9 +132,9 @@
                     <p class="p_costo">$2,000,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#" class="btn_d"> Ver propiedad</a>
@@ -159,7 +159,7 @@
         <div class="contenedor_blog">
             <h2 class="h2_blog">Nuestro Blog</h2>
             <article class="article_blog dis_flex_b">
-                <img src="/img/blog1.jpg" alt="">
+                <img src="img/blog1.jpg" alt="">
                 <div class="blog_p dis_flex_b">
                     <h2>Terraza en el techo de tu casa</h2>
                     <p>Escrito el:<small>26/05/2021</small> por: <small>Admin</small></p>
@@ -167,7 +167,7 @@
                 </div>
             </article>
             <article class="article_blog dis_flex_b">
-                <img src="/img/blog2.jpg" alt="">
+                <img src="img/blog2.jpg" alt="">
                 <div class="blog_p dis_flex_b">
                     <h2>Guia para la decoracion de tu hogar</h2>
                     <p>Escrito el:<small>26/05/2021</small> por: <small>Admin</small></p>
@@ -179,7 +179,7 @@
         <div class="contenedor_test">
             <h2 class="h2_blog">Testimoniales</h2>
             <article class="dis_flex_b">
-                <img src="/img/comilla.svg" alt="">
+                <img src="img/comilla.svg" alt="">
                 <p class="p_test">El personal se comporto de una excelente forma, muy buena atencion y la casa que me ofrecieros
                     cumple con todas mis expectativas.<br>
                     <small class="autor_test">-Juan De la Torre</small>
@@ -194,10 +194,10 @@
         <p><small>Copyright 2021 - exoncabral1@gmail.com</small></p>
 
         <div class="contenedor_menu contenedor_nav dis_flex_b">
-            <a href="/html/nosotros.html">Nosotros</a>
-            <a href="/html/Anuncios.html">Anuncios</a>
-            <a href="/html/blog.html">Blog</a>
-            <a href="/html/contacto.html">Contacto</a>  
+            <a href="html/nosotros.html">Nosotros</a>
+            <a href="html/Anuncios.html">Anuncios</a>
+            <a href="html/blog.html">Blog</a>
+            <a href="html/contacto.html">Contacto</a>  
     </div>
     </footer>
 
