--- a/html/Anuncios.html
+++ b/html/Anuncios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Bienes Raices/Anuncios</title>
 </head>
@@ -31,7 +31,7 @@
     <main>
         <section class="section_depart dis_flex_b section">
             <article class="article_depart">
-                <img src="/img/anuncio1.jpg">
+                <img src="../img/anuncio1.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -42,9 +42,9 @@
                     <p class="p_costo">$2,500,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="../img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#" class="btn_d"> Ver propiedad</a>
@@ -52,7 +52,7 @@
             </article>
 
             <article  class="article_depart">
-                <img src="/img/anuncio2.jpg">
+                <img src="../img/anuncio2.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -63,9 +63,9 @@
                     <p class="p_costo">$3,000,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="../img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#"class="btn_d"> Ver propiedad</a>
@@ -73,7 +73,7 @@
             </article>
 
             <article class="article_depart">
-                <img src="/img/anuncio3.jpg">
+                <img src="../img/anuncio3.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -84,9 +84,9 @@
                     <p class="p_costo">$2,000,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="../img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#" class="btn_d"> Ver propiedad</a>
@@ -95,7 +95,7 @@
 
 
             <article class="article_depart">
-                <img src="/img/anuncio4.jpg">
+                <img src="../img/anuncio4.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -106,9 +106,9 @@
                     <p class="p_costo">$2,500,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="../img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#" class="btn_d"> Ver propiedad</a>
@@ -116,7 +116,7 @@
             </article>
 
             <article  class="article_depart">
-                <img src="/img/anuncio5.jpg">
+                <img src="../img/anuncio5.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -127,9 +127,9 @@
                     <p class="p_costo">$3,000,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="../img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#"class="btn_d"> Ver propiedad</a>
@@ -137,7 +137,7 @@
             </article>
 
             <article class="article_depart">
-                <img src="/img/anuncio6.jpg">
+                <img src="../img/anuncio6.jpg">
 
                 <div class="contenedor_depart  dis_flex_b">
 
@@ -148,9 +148,9 @@
                     <p class="p_costo">$2,000,000</p>
 
                     <div class="iconos_depart">
-                        <img src="/img/icono_wc.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
-                        <img src="/img/icono_dormitorio.svg" class="img_icono"><span>4</span>
+                        <img src="../img/icono_wc.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_estacionamiento.svg" class="img_icono"><span>3</span>
+                        <img src="../img/icono_dormitorio.svg" class="img_icono"><span>4</span>
                     </div>
 
                     <a href="#" class="btn_d"> Ver propiedad</a>
