--- a/index.html
+++ b/index.html
@@ -5,32 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/mediaq.css">
+    <link rel="stylesheet" href="icomoon/style.css">
     <title>Bienes Raices</title>
 </head>
 <body>
 <!-------------------------------------Header----------------------------------------->
 
-    <header class="head_inicio inicio color_white">
+    <header class="head_background">
 
-            <div class="contenedor_head dis_flex_b section">
-                <div class="contenedor_nav dis_flex_b">
+            <a href="#menu" class="abrir"><span class="icon-menu"></span></a>
+            <a href="index.html" class="cont_logo"><img src="img/logo.svg"></a>
 
-                        <a href="index.html">
-                            <img src="img/logo.svg" alt="">
-                        </a>
-                        <div class="contenedor_menu dis_flex_b">
-                                <a href="html/nosotros.html">Nosotros</a>
-                                <a href="html/Anuncios.html">Anuncios</a>
-                                <a href="html/blog.html">Blog</a>
-                                <a href="html/contacto.html">Contacto</a>  
-                        </div>
-                </div>
+        <div id="menu" class="contenedor">
+
+            <div class="header">
+                <span class="text-menu">Menu</span>
+                <a href="#" class="cerrar"><span class="icon-cross"></span></a>
+            </div>
+
+            <div class="div_nav">
+                <a href="html/nosotros.html"><span class="icon-briefcase icono_nav"></span>Nosotros</a>
+                <a href="html/Anuncios.html"><span class="icon-rocket icono_nav"></span> Anuncios</a>
+                <a href="html/blog.html"><span  class="icon-earth icono_nav"></span> Blog</a>
+                <a href="html/contacto.html"><span  class="icon-envelop icono_nav"></span> Contacto</a>  
+                
+        </div>
+
+            </div>
                 <p class="text_head">Venta de Casas y Departamentos<br>Exclusivos de Lujo</p>
             </div>
 
+
+        </div>
+
     </header>
 
+       
 <!-------------------------------------Section Nosotros-------------------------------------------->
 
     <div class="title_n">
